--- a/app/src/main/res/layout/activity_all_meds.xml
+++ b/app/src/main/res/layout/activity_all_meds.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,21 +7,8 @@
     tools:context=".AllMeds">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/medicationRecycler"
-        android:layout_width="379dp"
-        android:layout_height="483dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewLabelAllMedications"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/medicationRecycler" />
 
-    <TextView
-        android:id="@+id/viewLabelAllMedications"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="All Medications"
-        app:layout_constraintBottom_toTopOf="@+id/medicationRecycler"
-        app:layout_constraintEnd_toEndOf="@+id/medicationRecycler"
-        app:layout_constraintStart_toStartOf="@+id/medicationRecycler"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
