--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/medicationRecycler"
+        android:id="@+id/prescriptionRecycler"
         android:layout_width="377dp"
         android:layout_height="405dp"
         android:layout_marginStart="16dp"
@@ -65,12 +65,12 @@
 
     <Button
 
-        android:id="@+id/buttonAddPrescription"
+        android:id="@+id/buttonMedList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="36dp"
-        android:text="Button"
+        android:text="Med List"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/calendar" />
 
