--- a/app/src/main/res/layout/prescription_card.xml
+++ b/app/src/main/res/layout/prescription_card.xml
@@ -24,7 +24,7 @@
             android:text="Edit" />
 
         <TextView
-            android:id="@+id/viewMedName"
+            android:id="@+id/viewMedNamePrescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -34,7 +34,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
-            android:id="@+id/viewMedGenName"
+            android:id="@+id/viewMedGenNamePrescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/viewMedName"
