--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <item
         android:id="@+id/action_profile"
@@ -10,8 +11,8 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_calendar"
-        android:title="B"
+        android:title="Calendar"
         android:enabled="true"
-        android:icon="@drawable/ic_action_profile"
+        android:icon="@drawable/ic_date"
         app:showAsAction="ifRoom"/>
 </menu>
