--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -7,7 +7,7 @@
     tools:context=".dosageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view2"
+        android:id="@+id/CalendarRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
