--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".dosageActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/CalendarRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+
 
 
     
@@ -31,5 +30,10 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/CalendarRecycler"
+        android:layout_width="match_parent"
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_height="match_parent" />
+
+</LinearLayout>
