--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -34,6 +34,12 @@
         android:id="@+id/CalendarRecycler"
         android:layout_width="match_parent"
 
-        android:layout_height="match_parent" />
+        android:layout_height="578dp" />
+
+    <TextView
+        android:id="@+id/dow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DOW" />
 
 </LinearLayout>
