--- a/app/src/main/res/layout/activity_med_fragment.xml
+++ b/app/src/main/res/layout/activity_med_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.MedFragment">
+    tools:context=".Fragments.MedTabFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
