--- a/app/src/main/res/layout/activity_employee_profile.xml
+++ b/app/src/main/res/layout/activity_employee_profile.xml
@@ -10,13 +10,14 @@
         android:id="@+id/manuEmp"
         android:layout_width="310dp"
         android:layout_height="45dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:hint="Manufacturer"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/addMedEmp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="402dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/sideEffectsEmp"
@@ -36,13 +37,14 @@
         android:id="@+id/nameEmp"
         android:layout_width="310dp"
         android:layout_height="45dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Usual Name"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/mainDiseasesEmp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="213dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/genNameEmp"
@@ -61,22 +63,24 @@
         android:id="@+id/mainDiseasesEmp"
         android:layout_width="310dp"
         android:layout_height="45dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="Main Diseases (split by comma)"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/sideEffectsEmp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="275dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/addMedEmp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="200dp"
         android:text="Add Medi. to DB"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="465dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
