--- a/app/src/main/res/layout/activity_employee_profile.xml
+++ b/app/src/main/res/layout/activity_employee_profile.xml
@@ -10,6 +10,7 @@
         android:id="@+id/manuEmp"
         android:layout_width="310dp"
         android:layout_height="45dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
         android:hint="Manufacturer"
@@ -17,7 +18,8 @@
         app:layout_constraintBottom_toTopOf="@+id/addMedEmp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sideEffectsEmp" />
 
     <EditText
         android:id="@+id/sideEffectsEmp"
