--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -10,55 +10,43 @@
         android:id="@+id/textViewWelcome"
         android:layout_width="249dp"
         android:layout_height="46dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="52dp"
         android:text="Welcome to your profile!"
         android:textAlignment="gravity"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewFirstName"
-        android:layout_width="214dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="8dp"
-        android:text="~You shouldn't see this ever~"
-        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="52dp"
+        android:text="~You shouldn't see this~"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />
 
     <TextView
         android:id="@+id/textViewLastName"
-        android:layout_width="298dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="8dp"
-        android:text="~You shouldn't see this ever~"
-        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/prescriptionRecycler"
-        android:layout_width="384dp"
-        android:layout_height="376dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />
+        android:text="~You shouldn't see this~"
+        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
+        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />
 
     <Button
         android:id="@+id/buttonEditProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Edit Profile"
+        android:text="Edit"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewWelcome"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/textViewWelcome" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
